[gd_scene load_steps=5 format=3 uid="uid://pj3okss4lgka"]

[ext_resource type="Script" path="res://scripts/card_display/character_cards/character_card_2d.gd" id="1_vqeiy"]
[ext_resource type="Texture2D" uid="uid://blbseq742l0cv" path="res://Sprites/Characters Sprite/Lisirmee_decor.png" id="3_lukj7"]
[ext_resource type="Texture2D" uid="uid://cphxp0lqogk01" path="res://Sprites/ui_icons/draft_hp.png" id="4_sq6vd"]

[sub_resource type="CanvasTexture" id="CanvasTexture_cmb2i"]

[node name="CharacterCard2D" type="Control"]
custom_minimum_size = Vector2(500, 850)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1420.0
offset_bottom = -230.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_vqeiy")

[node name="CharacterSprite" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_lukj7")
expand_mode = 1
stretch_mode = 5

[node name="BottomInfo" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="HealthBackground" type="TextureRect" parent="BottomInfo"]
self_modulate = Color(0.588235, 0, 0, 1)
show_behind_parent = true
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
texture = ExtResource("4_sq6vd")
expand_mode = 1
stretch_mode = 5

[node name="CharacterMaxHealth" type="Label" parent="BottomInfo/HealthBackground"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterName" type="Label" parent="BottomInfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "LISIRMEE"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="FXOverlay" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_cmb2i")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
